--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,5 @@ texcount*
 
 # Allow
 
-!Sistema_Accessi_IoT_presentazione_23_06_2019.pdf
+!Sistema_Accessi_IoT.pdf
 !RIASSUNTO_Sistema_Accessi_IoT_Andrei_Ciulpan_872394.pdf
