aggiornato pdf della presentazione

--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,5 @@ texcount*
 
 # Allow
 
-!Sistema_Accessi_IoT.pdf
+!Sistema Accessi IoT.pdf
 !RIASSUNTO_Sistema_Accessi_IoT_Andrei_Ciulpan_872394.pdf
